[build-system]
requires = ["setuptools", "wheel"]

[metadata]
name = "asyncio_play"
version = "0.2.0"
description = "A project to play with asyncio"
author = "Michael Penhallegon"
author_email = "mike@hematite.tech"

[options]
python_requires = ">=3.8"
install_requires = ["asyncio >= 3.4"]

[options.package.find]
where="."
exclude=["script", "protos"]

[options.extras_require]
dev = ["pytest >= 6.2"]